<resources>
    <string name="app_name">Songs</string>
    <string name="tv_doctors">Doctors</string>
    <string name="tv_specializations">Specializations</string>
    <string name="tv_search">Search</string>
    <string name="tv_add_doctor">Add doctor</string>
    <string name="tv_edit">Edit</string>
    <string name="tv_doctor_details">Doctor Details</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_experience_in_year">Experience in Year</string>
    <string name="tv_registered_on">Registered On</string>
    <string name="tv_blood_group">Blood Group</string>
    <string name="tv_dob">DOB</string>
    <string name="tv_delete">Delete</string>
    <string name="tv_address">Address</string>
    <string name="tv_last_updated">Last Updated</string>
    <string name="tv_edit_doctor">Edit Doctor</string>
    <string name="tv_first_name">First Name</string>
    <string name="tv_email">Email</string>
    <string name="tv_last_name">Last Name</string>
    <string name="tv_male">Male</string>
    <string name="tv_twitter">Twitter</string>
    <string name="tv_linked_in">Linked In</string>
    <string name="tv_instagram">Instagram</string>
    <string name="tv_status">Status</string>
    <string name="tv_address_1">Address 1</string>
    <string name="tv_address_2">Address 2</string>
    <string name="tv_country">Country</string>
    <string name="tv_state">State</string>
    <string name="tv_city">City</string>
    <string name="tv_postal_code">Postal Code</string>
    <string name="tv_save">Save</string>
    <string name="tv_discard">Discard</string>
    <string name="tv_imageback">ImageBack</string>
    <string name="tv_imagelogo">ImageLogo</string>
    <string name="tv_contact_no">Contact No</string>
    <string name="tv_select_gender">Select Gender :</string>
    <string name="tv_female">Female</string>
    <string name="tv_password">Password</string>
    <string name="tv_confirm_password">Confirm Password</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="tv_login">Login</string>
    <string name="tv_forgot_your_password">Forgot your password?</string>
</resources>