<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_sign_in"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/rubik_bold"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/bg_et"
                android:hint="@string/tv_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />


            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/bg_et"
                android:hint="@string/tv_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <TextView
                android:id="@+id/tv_forgot_your_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_custom_blue"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/btn_login"
                android:text="@string/tv_forgot_your_password"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="@id/et_email"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_login"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:background="@drawable/bg_btn_blue"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_your_password"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>