<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_ver2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_edit_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_doctor_details"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/rubik_bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/doctor_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:cardElevation="7dp"
        app:cardCornerRadius="7dp"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_doctor">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:padding="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/doctor_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/test_iv"
                style="@style/CornerSize50Percent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                tools:text = "Misa misa"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/rubik_bold"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_email"
                app:layout_constraintTop_toTopOf="@id/doctor_logo"
                app:layout_constraintStart_toEndOf="@id/doctor_logo"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="dna.ms@hotmail.com"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="@id/tv_name"
                app:layout_constraintBottom_toBottomOf="@id/doctor_logo"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/doctor_info"
        app:layout_constraintStart_toStartOf="@id/doctor_info"
        app:layout_constraintEnd_toEndOf="@id/doctor_info"
        app:layout_constraintBottom_toTopOf="@id/btn_delete">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/tv_specializations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_specializations"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/specialization"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="Medical Genetics"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/tv_specializations"
                    app:layout_constraintStart_toStartOf="@id/tv_specializations"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="7dp"/>
                
                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/specialization"
                    app:layout_constraintStart_toStartOf="@id/tv_specializations"
                    android:text="@string/tv_gender"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    tools:text="Male"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/tv_gender"
                    app:layout_constraintStart_toStartOf="@id/specialization"
                    app:layout_constraintEnd_toEndOf="@id/specialization"/>

                <TextView
                    android:id="@+id/tv_experience_in_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_bold"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_experience_in_year"
                    app:layout_constraintTop_toBottomOf="@id/gender"
                    app:layout_constraintStart_toStartOf="@id/tv_gender"/>

                <TextView
                    android:id="@+id/experience_in_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    tools:text="50"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_experience_in_year"
                    app:layout_constraintStart_toStartOf="@id/gender"
                    app:layout_constraintEnd_toEndOf="@id/gender"/>
                
                <TextView
                    android:id="@+id/tv_registered_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_registered_on"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_bold"
                    app:layout_constraintTop_toBottomOf="@id/experience_in_year"
                    app:layout_constraintStart_toStartOf="@id/tv_experience_in_year"/>

                <TextView
                    android:id="@+id/registered_on"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    tools:text="1 days ago"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_registered_on"
                    app:layout_constraintStart_toStartOf="@id/experience_in_year"
                    app:layout_constraintEnd_toEndOf="@id/experience_in_year"/>

                <TextView
                    android:id="@+id/tv_blood_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_blood_group"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_bold"
                    app:layout_constraintTop_toBottomOf="@id/registered_on"
                    app:layout_constraintStart_toStartOf="@id/tv_registered_on"/>

                <TextView
                    android:id="@+id/blood_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    tools:text="A+"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_blood_group"
                    app:layout_constraintStart_toStartOf="@id/registered_on"
                    app:layout_constraintEnd_toEndOf="@id/registered_on"/>

                <TextView
                    android:id="@+id/tv_dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_dob"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_bold"
                    app:layout_constraintTop_toBottomOf="@id/blood_group"
                    app:layout_constraintStart_toStartOf="@id/tv_blood_group"/>

                <TextView
                    android:id="@+id/dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    tools:text="N/A"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_dob"
                    app:layout_constraintStart_toStartOf="@id/blood_group"
                    app:layout_constraintEnd_toEndOf="@id/blood_group"/>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_address"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_bold"
                    app:layout_constraintTop_toBottomOf="@id/dob"
                    app:layout_constraintStart_toStartOf="@id/tv_dob"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    tools:text="N/A"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_address"
                    app:layout_constraintStart_toStartOf="@id/dob"
                    app:layout_constraintEnd_toEndOf="@id/dob"/>

                <TextView
                    android:id="@+id/tv_last_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_last_updated"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/rubik_bold"
                    app:layout_constraintTop_toBottomOf="@id/address"
                    app:layout_constraintStart_toStartOf="@id/tv_address"/>

                <TextView
                    android:id="@+id/last_updated"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    tools:text="2 hours ago"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_last_updated"
                    app:layout_constraintStart_toStartOf="@id/dob"
                    app:layout_constraintEnd_toEndOf="@id/dob"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_edit"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_blue"
        app:layout_constraintStart_toEndOf="@id/btn_delete"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor2"
        app:layout_constraintEnd_toEndOf="@id/guideline_ver2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_delete"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_red"
        app:layout_constraintEnd_toStartOf="@id/btn_edit"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor2"
        app:layout_constraintStart_toStartOf="@id/guideline_ver1"/>

</androidx.constraintlayout.widget.ConstraintLayout>